--- a/public/skin/adminhtml/default/default/boxes.css
+++ b/public/skin/adminhtml/default/default/boxes.css
@@ -923,15 +923,10 @@ ul.item-options li { padding-left:.7em; }
 .giftmessage-whole-order-container .entry-edit label { width:121px; }
 
 /* PayPal */
-
-.pp-general-uk > .config-heading .heading strong,
-.pp-method-payflow > .config-heading .heading strong,
-.pp-method-express > .config-heading .heading strong,
-.pp-method-general > .config-heading .heading strong { padding-left:56px; background:url(images/paypal/logo-paypal.png) no-repeat 0 2px; }
-.pp-method-general > .config-heading .button-container { padding:8px 0 0 180px; background:url(images/paypal/pp-allinone.png) no-repeat 0 0; height:26px; }
-.pp-method-express > .config-heading .button-container { padding:0 0 0 174px; background:url(images/paypal/pp-alt.png) no-repeat 0 0; height:29px; }
-.pp-method-payflow > .config-heading .button-container { padding:0px 0 0 99px; background:url(images/paypal/pp-gateways.png) no-repeat 1px 0; height:36px; }
-.pp-general-uk > .config-heading .button-container { padding:9px 0 0 201px; background:url(images/paypal/pp-uk.png) no-repeat 0 0; height:27px; }
+:is(.pp-general-uk, .pp-method-payflow, .pp-method-express, .pp-method-general) > .config-heading .heading strong::before {
+    content: 'PayPal';
+    margin-right: 4px;
+}
 .payflow-settings-notice {padding-bottom: 1em;max-width: 660px;}
 .payflow-settings-notice .important-label {color:red;}
 .payflow-settings-notice ul.options-list {list-style:disc;padding:0 2em;}
